# memo-app

./: .gitignore  docker-compose.yml  memoapp  routes.json  routes.txt  run.py  run_local.sh  test_db.py  test_gemini.py  test_speaker_extraction.py
memwebapp/backend/: .gitignore  Dockerfile  README.md  RESTART_GUIDE.md  add_custom_template_sqlite.py  add_duration_column.py  db_fix.py  frontend.html  image.py  main.py  migrate_transcription_prompt.py  nouns.csv  pyproject.toml  requirements.txt  reset_failed_meetings.py  restart.sh  run.py  seed_templates.py  setup.py  test_auth.py  test_background_service.py  test_duration.py  verify_fix.py
memwebapp/backend/.github/workflows/: deploy.yml
memwebapp/backend/api/models/: chart.py  dashboard.py  meeting.py  speaker_profile.py  template.py  user.py
memwebapp/backend/api/routers/: auth.py  basic_auth.py  charts.py  crm.py  dashboards.py  generation.py  google_auth.py  meetings.py  (+3 more)
memwebapp/backend/config/: google_config.py  microsoft_config.py  settings.py
memwebapp/backend/database/: add_custom_template_migration.py  connection.py  migration_add_action_items.py  migration_add_created_by_to_templates.py  migration_add_password_hash_postgresql.py  migration_add_speaker_diarization.py  migration_add_speaker_profiles.py  migration_add_speaker_profiles_postgresql.py  migration_add_status_field.py  migration_add_user_id.py  migration_fix_data_types.py  migration_fix_datetime_fields.py  migration_keypoints_to_list.py  migration_participants_to_json.py  migration_postgresql_setup.py  migration_remove_jwt_tokens.py  migration_update_key_points.py  migration_uuid_s3.py
memwebapp/backend/pyaudioop/: __init__.py
(+83 files in other folders)
